--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,5 @@
 index:
     path: /home
-#    defaults: { _controller: 'App\Controller\DefaultController::index' }
+    defaults: { _controller: 'App\Controller\DefaultController::index' }
+logout:
+    path: /logout
