--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "symfony/orm-pack": "^1.0",
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/validator": "^3.4",
+        "symfony/webpack-encore-pack": "^1.0",
         "symfony/yaml": "^3.4"
     },
     "require-dev": {
