--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,5 @@
 index:
-    path: /home
+    path: home
     defaults: { _controller: 'App\Controller\DefaultController::index' }
 logout:
     path: /logout
