--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production"
+    },
+    "dependencies": {
+        "fullpage.js": "^2.9.7"
     }
 }
