--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,21 @@
-Redirect "/home"
+<VirtualHost *:80>
+    ServerName lugh-yolo
+    ServerAlias 51.15.238.98
+
+
+       DocumentRoot /var/www/lugh/public
+       <Directory /var/www/lugh/public>
+           AllowOverride All
+           Order Allow,Deny
+           Allow from All
+       </Directory>
+
+       # uncomment the following lines if you install assets as symlinks
+       # or run into problems when compiling LESS/Sass/CoffeeScript assets
+       # <Directory /var/www/project>
+       #     Options FollowSymlinks
+       # </Directory>
+
+       ErrorLog /var/log/apache2/project_error.log
+       CustomLog /var/log/apache2/project_access.log combined
+   </VirtualHost>
