--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "easycorp/easyadmin-bundle": "^1.17",
         "sensio/framework-extra-bundle": "^5.1",
         "stripe/stripe-php": "^6.7",
+        "symfony/apache-pack": "^1.0",
         "symfony/console": "^3.4",
         "symfony/debug-pack": "^1.0",
         "symfony/flex": "^1.0",
